const List<String> commonProducts = [
  'Abacaxi',
  'Absorvente',
  'Achocolatado',
  'Açúcar',
  'Água Sanitária',
  'Alface',
  'Alho',
  'Amaciante',
  'Amendoim',
  'Arroz',
  'Azeite',
  'Azeitona',
  'Bacon',
  'Balas',
  'Banana',
  'Batata',
  'Batata Palha',
  'Biscoito',
  'Bolacha',
  'Bolo',
  'Brócolis',
  'Café',
  'Carne',
  'Cebola',
  'Cenoura',
  'Cerveja',
  'Chá',
  'Chocolate',
  'Condicionador',
  'Couve',
  'Creme de Leite',
  'Creme Dental',
  'Desinfetante',
  'Desodorante',
  'Detergente',
  'Ervilha',
  'Esponja de Aço',
  'Extrato de Tomate',
  'Farinha de Mandioca',
  'Farinha de Trigo',
  'Feijão',
  'Fósforo',
  'Frango',
  'Frios',
  'Gelatina',
  'Goma de Mascar',
  'Hambúrguer',
  'Hidratante',
  'Iogurte',
  'Leite',
  'Leite Condensado',
  'Limão',
  'Linguiça',
  'Macarrão',
  'Maçã',
  'Maionese',
  'Mamão',
  'Manteiga',
  'Margarina',
  'Manga',
  'Melancia',
  'Melão',
  'Milho',
  'Molho de Tomate',
  'Mortadela',
  'Óleo',
  'Ovos',
  'Pão',
  'Papel Higiênico',
  'Papel Toalha',
  'Peixe',
  'Pera',
  'Pipoca',
  'Pizza',
  'Presunto',
  'Queijo',
  'Refrigerante',
  'Sabão em Barra',
  'Sabão em Pó',
  'Sabonete',
  'Salgadinho',
  'Salsicha',
  'Sal',
  'Shampoo',
  'Sorvete',
  'Suco',
  'Tomate',
  'Uva',
  'Vinagre',
];
